# Ai4MatLectures

./: .gitignore  .nojekyll  MEMORY.md  README.md  _quarto.yml  autograd.ipynb  autograd.py  convert_nb.py  custom.scss  index.html  index.qmd  linear_algebra.ipynb  linear_algebra.py  ndarray.ipynb  ndarray.py  pandas.ipynb  pandas.py  project_ai4matlectures.md  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  styles.css
.github/workflows/: publish.yml
ai4mat/datasets/: __init__.py  cahn_hilliard.py  chemical_elements.py  digits.py  iris.py  ising.py  nanoindentation.py  tensile_test.py
data/: week2_mystery.npz  week3_mystery.npz  week3_mystery_solutions.txt
notebooks/: smiley_gt.npy  week1_setup.ipynb  week1_setup.py  week2_la_physics.ipynb  week2_la_physics.py  week3_homework.py  week3_loss_and_leakage.py  week4_architecture_and_representation.ipynb  week4_architecture_and_representation.py  week4_homework.ipynb  week4_homework.py
notebooks/MFML/: week03_regression_tensile.html  week03_regression_tensile.ipynb  week03_regression_tensile.qmd  week04_classifier_iris.html  week04_classifier_iris.ipynb  week04_classifier_iris.qmd  week05_backprop_digits.html  week05_backprop_digits.ipynb  week05_backprop_digits.qmd  week07_overfitting_ising_light.html  week07_overfitting_ising_light.ipynb  week07_overfitting_ising_light.qmd  week10_autoencoder_ising_full.html  week10_autoencoder_ising_full.ipynb  week10_autoencoder_ising_full.qmd  (+3 more)
scripts/: build_week3_mystery.py
tests/: conftest.py  test_week3_mystery.py
tests/datasets/: test_digits.py  (+6 more)
(+44 files in other folders)
